k8/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-app
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      nodePort: 30002
