k8/mern-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern-app
  labels:
    name: fintrack-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: book-store
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173
    - host: api.book-store
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
